--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "back_users",
   "version": "1.0.0",
-  "description": "Servicio de backend SeedyFiuba",
+  "description": "Microservicio de usuarios backend SeedyFiuba",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon --inspect=0.0.0.0:8000 src/index.js",
