--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,20 +6,19 @@ services:
             - ./src:/app/src
         container_name: user-service
         restart: always
-        environment:
-            - PORT=8080
-            - DATABASE_URL=postgres://postgres:postgres@psql-container:5432/postgres
+        env_file:
+            - .env
         networks:
             - my-net
             - user-net
         ports:
             - ${PORT}:${PORT}
         depends_on:
-            - psql-container
+            - psql-users
         command: npm run dev
-    psql-container:
+    psql-users:
         image: postgres
-        container_name: psql-container
+        container_name: psql-users
         environment:
             - POSTGRES_PASSWORD=postgres
         volumes:
