Add automated migrations to DB

--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Microservicio de usuarios backend SeedyFiuba",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon --inspect=0.0.0.0:8000 src/index.js",
-    "start": "node src/index.js",
+    "db": "sequelize-cli db:migrate && sequelize-cli db:seed:undo:all && sequelize-cli db:seed:all",
+    "dev": "npm run db && nodemon --inspect=0.0.0.0:8000 src/index.js",
+    "start": "npm run db && node src/index.js",
     "test": "jest --collectCoverage"
   },
   "repository": {
@@ -23,6 +24,7 @@
     "express": "^4.17.1",
     "joi": "^17.4.0",
     "morgan": "^1.10.0",
+    "sequelize-cli": "^6.2.0",
     "pg": "^8.6.0",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.6.2",
